<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".ui.activity.AddShiftActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TableLayout
        android:id="@+id/inputsForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/endGuidline"
        app:layout_constraintStart_toEndOf="@id/startGuidline"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:gravity="center_vertical">

            <TextView
                android:text="@string/label_start_time"
                android:textColor="@android:color/black"/>

            <com.example.homebase.shared.ui.custom.DateEditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="@dimen/ms__item_height"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/label_start_time"
                android:textColor="@android:color/black"/>

            <com.example.homebase.shared.ui.custom.TimeEditText
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="@dimen/ms__item_height"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_access_time_24"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/label_end_time"
                android:textColor="@android:color/black" />

            <com.example.homebase.shared.ui.custom.TimeEditText
                android:id="@+id/endTime"
                android:layout_width="0dp"
                android:layout_height="@dimen/ms__item_height"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_baseline_access_time_24"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/label_employee"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spnEmployee"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:ms_background_color="@android:color/white" />

        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/label_role"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spnRole"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:ms_background_color="@android:color/white" />


        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/label_color"
                android:textColor="@android:color/black" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spnColor"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:ms_background_color="@android:color/white" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit_add_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputsForm" />


</androidx.constraintlayout.widget.ConstraintLayout>